--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "react-scripts": "1.0.14"
   },
   "dependencies": {
+    "jquery": "^3.1.0",
+    "moment": "^2.19.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2",
-    "jquery": "^3.1.0"
+    "react-moment": "^0.6.8",
+    "react-router-dom": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
