--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-moment": "^0.6.8",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-table": "^6.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
